--- a/kexi/migration/mdb/src/CMakeLists.txt
+++ b/kexi/migration/mdb/src/CMakeLists.txt
@@ -3,7 +3,9 @@ if (CMAKE_COMPILER_IS_GNUCXX OR CMAKE_COMPILER_IS_GNUC)
     add_definitions(-Wno-missing-format-attribute)
     add_definitions(-Wno-sign-compare)
     add_definitions(-Wno-unused-parameter)
-endif ()
+    add_definitions(-Wno-pointer-arith)
+    add_definitions(-std=c99)
+endif (CMAKE_COMPILER_IS_GNUCXX OR CMAKE_COMPILER_IS_GNUC)
 
 set(MDBTOOLS_SOURCE_DIR "${CMAKE_SOURCE_DIR}/kexi/migration/mdb/3rdparty/mdbtools")
 
@@ -31,7 +33,9 @@ ${MDBTOOLS_SOURCE_DIR}/libmdb/map.c
 ${MDBTOOLS_SOURCE_DIR}/libmdb/mem.c
 ${MDBTOOLS_SOURCE_DIR}/libmdb/money.c
 ${MDBTOOLS_SOURCE_DIR}/libmdb/options.c
+${MDBTOOLS_SOURCE_DIR}/libmdb/props.c
 ${MDBTOOLS_SOURCE_DIR}/libmdb/sargs.c
+${MDBTOOLS_SOURCE_DIR}/libmdb/stats.c
 ${MDBTOOLS_SOURCE_DIR}/libmdb/table.c
 ${MDBTOOLS_SOURCE_DIR}/libmdb/worktable.c
 ${MDBTOOLS_SOURCE_DIR}/libmdb/write.c
