--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -197,6 +197,7 @@ find_package(KF5 5.7.0 REQUIRED COMPONENTS Archive Codecs Config CoreAddons
                                      Parts
                                      XmlGui Kross Wallet
                                      Emoticons ConfigWidgets KDELibs4Support
+                                     TextWidgets KIO
     OPTIONAL_COMPONENTS
         NotifyConfig
         Activities
