--- a/filters/words/wordperfect/import/CMakeLists.txt
+++ b/filters/words/wordperfect/import/CMakeLists.txt
@@ -28,6 +28,6 @@ if(SHOULD_BUILD_FILEMANAGER_THUMBNAIL)
 endif()
 
 if(SHOULD_BUILD_OKULAR_GENERATOR_WORDPERFECT)
-    install( FILES libokularGenerator_wpd_calligra.desktop okularWpd_calligra.desktop DESTINATION ${SERVICES_INSTALL_DIR}/calligra )
+    install( FILES libokularGenerator_wpd_calligra.desktop okularWpd_calligra.desktop DESTINATION ${SERVICES_INSTALL_DIR} )
     install( PROGRAMS okularApplication_wpd_calligra.desktop DESTINATION ${XDG_APPS_INSTALL_DIR} )
 endif()
