calligra_build_test -> calligra_add_test and modernize this macro
Now the usage is calligra_add_test(<app_prefix> <test_basename> <libraries_to_link>).

Prefixes help to select subsets of tests to run, e.g. only Krita tests or Flake tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ endif()
 # BUILD_TESTING and KDE4_BUILD_TESTS to be set to FALSE
 # better fixes welcome
 if (BUILD_TESTING)
+    add_definitions(-DBUILD_TESTING)
     set(KDE4_BUILD_TESTS TRUE)
 endif()
 
@@ -778,7 +779,7 @@ macro_log_feature(KProperty_FOUND "KProperty" "A property editing framework with
 ###############################
 
 include(MacroCalligraAddBenchmark)
-include(MacroCalligraBuildTest)
+include(MacroCalligraAddTest)
 
  ####################
 #####################
