Initial port of Kexi Reports plugin to KReport

--- a/kexi/plugins/reports/CMakeLists.txt
+++ b/kexi/plugins/reports/CMakeLists.txt
@@ -17,12 +17,12 @@ set(kexi_reportplugin_SRCS
 if (KEXI_MOBILE)
 
 else ()
-  list(APPEND kexi_reportplugin_SRCS
-        keximigratereportdata.cpp
-  )
+#  list(APPEND kexi_reportplugin_SRCS
+#        keximigratereportdata.cpp
+#  )
 endif ()
 
-qt5_wrap_cpp(kexi_reportplugin_SRCS ../scripting/kexiscripting/kexiscriptadaptor.h)
+#qt5_wrap_cpp(kexi_reportplugin_SRCS ../scripting/kexiscripting/kexiscriptadaptor.h)
 
 add_library(kexi_reportplugin MODULE ${kexi_reportplugin_SRCS})
 kcoreaddons_desktop_to_json(kexi_reportplugin kexi_reportplugin.desktop)
@@ -38,6 +38,7 @@ target_link_libraries(kexi_reportplugin
         KProperty
 
         KF5::KrossCore
+        KF5::KDELibs4Support
 
         Qt5::Gui
         Qt5::Script
@@ -47,8 +48,9 @@ if (KEXI_MOBILE)
 
 else ()
     target_link_libraries(kexi_reportplugin
+      PRIVATE
         keximain
-        keximigrate
+#TODO        keximigrate
     )
 endif ()
 
