--- a/kexi/plugins/reports/CMakeLists.txt
+++ b/kexi/plugins/reports/CMakeLists.txt
@@ -17,12 +17,13 @@ set(kexi_reportplugin_SRCS
 if (KEXI_MOBILE)
 
 else ()
+#TODO KEXI3
 #  list(APPEND kexi_reportplugin_SRCS
 #        keximigratereportdata.cpp
 #  )
 endif ()
 
-#qt5_wrap_cpp(kexi_reportplugin_SRCS ../scripting/kexiscripting/kexiscriptadaptor.h)
+#TODO KEXI3 qt5_wrap_cpp(kexi_reportplugin_SRCS ../scripting/kexiscripting/kexiscriptadaptor.h)
 
 add_library(kexi_reportplugin MODULE ${kexi_reportplugin_SRCS})
 kcoreaddons_desktop_to_json(kexi_reportplugin kexi_reportplugin.desktop)
@@ -50,7 +51,7 @@ else ()
     target_link_libraries(kexi_reportplugin
       PRIVATE
         keximain
-#TODO        keximigrate
+#TODO KEXI3       keximigrate
     )
 endif ()
 
