calligradocinfopropspage just needs to link to kowidgets and KDE4_KFILE_LIBS

--- a/extras/properties/CMakeLists.txt
+++ b/extras/properties/CMakeLists.txt
@@ -1,12 +1,12 @@
 include_directories(
-    ${KOMAIN_INCLUDES}
+    ${KOWIDGETS_INCLUDES}
 )
 
 set(calligradocinfopropspage_PART_SRCS KoDocInfoPropsFactory.cpp)
 
 kde4_add_plugin(calligradocinfopropspage ${calligradocinfopropspage_PART_SRCS})
 
-target_link_libraries(calligradocinfopropspage  ${KDE4_KIO_LIBS} komain)
+target_link_libraries(calligradocinfopropspage ${KDE4_KFILE_LIBS} kowidgets)
 
 install(TARGETS calligradocinfopropspage DESTINATION ${PLUGIN_INSTALL_DIR})
 
