Use DATA_INSTALL_DIR instead of INSTALL_PREFIX/share
Allowing to configure the install location, which is helpful with a
multiarch layout, where prefix might be something like /usr/<arch> but
arch independent data should be installed to /usr/share/...

REVIEW: 124630

--- a/active/CMakeLists.txt
+++ b/active/CMakeLists.txt
@@ -69,4 +69,4 @@ endif()
 
 install(TARGETS calligraactive RUNTIME DESTINATION bin)
 install(FILES calligraactive.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
-install(DIRECTORY qml DESTINATION share/calligraactive)
+install(DIRECTORY qml DESTINATION ${DATA_INSTALL_DIR}/calligraactive)
