--- a/plugins/textshape/CMakeLists.txt
+++ b/plugins/textshape/CMakeLists.txt
@@ -109,6 +109,7 @@ set ( textshape_SRCS
     dialogs/SimpleAnnotationWidget.cpp
     dialogs/ManageBookmarkDialog.cpp
     dialogs/SectionFormatDialog.cpp
+    dialogs/SectionsSplitDialog.cpp
 
     commands/ChangeListLevelCommand.cpp
     commands/ShowChangesCommand.cpp
@@ -167,6 +168,7 @@ ki18n_wrap_ui(textshape_SRCS
     dialogs/LinkInsertionDialog.ui
     dialogs/ManageBookmark.ui
     dialogs/SectionFormatDialog.ui
+    dialogs/SectionsSplitDialog.ui
 
 )
 
