Author minimal porting
Summary:
Old discussion thread: rCALLIGRAf84593b15ae8a0be2852d2987511450936f7b24b

I've missed with an Phabricator application last time, it seems that Audit is needed only to check existing commit without support of changing a patch.

Changes scince Audit: no harddep from Soprano now, fixed comments

Test Plan:
1) Setting Soprano_FOUND to FALSE results in success build without RDF.
2) Author with patched Soprano seems to work, haven't done any hard testing.

Reviewers: kossebau

Reviewed By: kossebau

Projects: #calligra:_3.0

Maniphest Tasks: T461

Differential Revision: https://phabricator.kde.org/D200

--- a/words/part/CMakeLists.txt
+++ b/words/part/CMakeLists.txt
@@ -207,6 +207,8 @@ set(authorpart_PART_SRCS author/CAuFactoryInit.cpp )
 
 add_library(authorpart MODULE ${authorpart_PART_SRCS})
 
+kcoreaddons_desktop_to_json(authorpart author/authorpart.desktop)
+
 target_link_libraries(authorpart   wordsprivate )
 
 install(TARGETS authorpart DESTINATION ${CALLIGRA_PLUGIN_INSTALL_DIR})
@@ -236,7 +238,6 @@ install(TARGETS calligraauthor  ${INSTALL_TARGETS_DEFAULT_ARGS})
 ########### install files ###############
 
 install( FILES author/author.rc author/author_readonly.rc  DESTINATION ${DATA_INSTALL_DIR}/author)
-install( FILES author/authorpart.desktop  DESTINATION ${SERVICES_INSTALL_DIR}/calligra)
 install( PROGRAMS author/author.desktop  DESTINATION ${XDG_APPS_INSTALL_DIR})
 install( FILES author/authorrc DESTINATION ${CONFIG_INSTALL_DIR} )
 
