--- a/filters/words/msword-odf/wv2/src/CMakeLists.txt
+++ b/filters/words/msword-odf/wv2/src/CMakeLists.txt
@@ -83,8 +83,9 @@ set( wv2_HEADERS
 
 add_definitions("-DMAKE_WV2_LIB")
 add_library( kowv2 SHARED ${wv2_SOURCES} ${wv2_HEADERS} ${wv2_GENERATED} )
+generate_export_header(kowv2 BASE_NAME wv2)
 include_directories(  ../../../../libmso)
-target_link_libraries( kowv2 mso KF5::KDELibs4Support ${ZLIB_LIBRARIES} ${ICONV_LIBRARIES}  )
+target_link_libraries( kowv2 mso ${ZLIB_LIBRARIES} ${ICONV_LIBRARIES}  )
 set_target_properties( kowv2 PROPERTIES
                   SOVERSION ${LT_VERSION_CURRENT}
                   VERSION ${LT_VERSION_CURRENT}.${LT_VERSION_AGE}.${LT_VERSION_REVISION}
