--- a/braindump/plugins/stateshape/CMakeLists.txt
+++ b/braindump/plugins/stateshape/CMakeLists.txt
@@ -24,6 +24,7 @@ target_link_libraries(
     braindump_shape_state
     flake
     Qt5::Core
+    Qt5::Svg
     braindumpcore
     )
 install(TARGETS braindump_shape_state DESTINATION ${CALLIGRA_PLUGIN_INSTALL_DIR})
