Use K_PLUGIN_FACTORY_WITH_JSON macro for plugins

--- a/braindump/plugins/quickstates/CMakeLists.txt
+++ b/braindump/plugins/quickstates/CMakeLists.txt
@@ -10,6 +10,8 @@ target_link_libraries(braindumpquickstates ${FLAKE_LIBRARY} ${KOTEXT_LIBRARY} ${
 
 install(TARGETS braindumpquickstates  DESTINATION ${CALLIGRA_PLUGIN_INSTALL_DIR})
 
+kcoreaddons_desktop_to_json(braindumpquickstates braindumpquickstates.desktop)
+
 ########### install files ###############
 
 install( FILES  quickstates.rc  DESTINATION ${DATA_INSTALL_DIR}/braindump/plugins)
