--- a/braindump/plugins/webshape/CMakeLists.txt
+++ b/braindump/plugins/webshape/CMakeLists.txt
@@ -26,6 +26,8 @@ target_link_libraries(
     )
 install(TARGETS braindump_shape_web DESTINATION ${CALLIGRA_PLUGIN_INSTALL_DIR})
 
+kcoreaddons_desktop_to_json(braindump_shape_web braindump_shape_web.desktop)
+
 ########### install files ###############
 
 install( FILES braindump_shape_web.desktop DESTINATION ${SERVICES_INSTALL_DIR}/calligra)
