Install *ui.rc files to KXMLGUI_INSTALL_DIR

--- a/braindump/data/CMakeLists.txt
+++ b/braindump/data/CMakeLists.txt
@@ -7,7 +7,7 @@ install( FILES
     DESTINATION ${SERVICETYPES_INSTALL_DIR})
 
 ### GUI files ###
-install( FILES braindumpui.rc braindumpview.rc DESTINATION ${DATA_INSTALL_DIR}/braindump)
+install( FILES braindumpui.rc braindumpview.rc DESTINATION ${KXMLGUI_INSTALL_DIR}/braindump)
 
 install( FILES import/zoom-pixels.png DESTINATION ${DATA_INSTALL_DIR}/braindump/icons/hicolor/22x22/actions)
 
