Fix TRANSLATION_DOMAIN clash in karbon/plugin/tools

--- a/karbon/plugins/tools/CMakeLists.txt
+++ b/karbon/plugins/tools/CMakeLists.txt
@@ -1,3 +1,5 @@
+# plugin/tools have their own catalog
+remove_definitions(-DTRANSLATION_DOMAIN=\"karbon\")
 add_definitions(-DTRANSLATION_DOMAIN=\"KarbonTools\")
 
 include_directories(
