Fix CentOS build

--- a/extras/properties/CMakeLists.txt
+++ b/extras/properties/CMakeLists.txt
@@ -6,7 +6,7 @@ set(calligradocinfopropspage_PART_SRCS KoDocInfoPropsFactory.cpp)
 
 kde4_add_plugin(calligradocinfopropspage ${calligradocinfopropspage_PART_SRCS})
 
-target_link_libraries(calligradocinfopropspage ${KDE4_KFILE_LIBS} kowidgets)
+target_link_libraries(calligradocinfopropspage ${KDE4_KFILE_LIBS} ${KDE4_KIO_LIBS} kowidgets)
 
 install(TARGETS calligradocinfopropspage DESTINATION ${PLUGIN_INSTALL_DIR})
 
