calligrathumbnail no longer needs to link KF5::KIOWidgets

--- a/extras/thumbnail/CMakeLists.txt
+++ b/extras/thumbnail/CMakeLists.txt
@@ -5,14 +5,14 @@ include_directories(
 
 set(calligrathumbnail_SRCS calligracreator.cpp)
 add_library(calligrathumbnail MODULE ${calligrathumbnail_SRCS})
-target_link_libraries(calligrathumbnail komain KF5::KIOWidgets)
+target_link_libraries(calligrathumbnail komain)
 install(TARGETS calligrathumbnail  DESTINATION ${PLUGIN_INSTALL_DIR})
 
 if( SHOULD_BUILD_APP_FLOW OR SHOULD_BUILD_APP_KARBON )
     set(calligraimagethumbnail_SRCS calligracreator.cpp)
     add_library(calligraimagethumbnail MODULE ${calligraimagethumbnail_SRCS})
     macro_add_compile_flags(calligraimagethumbnail "-DNO_ICON_BLENDING")
-    target_link_libraries(calligraimagethumbnail komain KF5::KIOWidgets)
+    target_link_libraries(calligraimagethumbnail komain)
     install(TARGETS calligraimagethumbnail  DESTINATION ${PLUGIN_INSTALL_DIR})
 endif()
 
