Explicitly link to kdelibs4support
Now that kotext and flake don't provide it anymore.

--- a/braindump/plugins/stateshape/CMakeLists.txt
+++ b/braindump/plugins/stateshape/CMakeLists.txt
@@ -26,6 +26,7 @@ target_link_libraries(
     Qt5::Core
     Qt5::Svg
     braindumpcore
+    KF5::KDELibs4Support
     )
 install(TARGETS braindump_shape_state DESTINATION ${CALLIGRA_PLUGIN_INSTALL_DIR})
 
