--- a/filters/words/msword-odf/wv2/src/CMakeLists.txt
+++ b/filters/words/msword-odf/wv2/src/CMakeLists.txt
@@ -85,7 +85,7 @@ add_definitions("-DMAKE_WV2_LIB")
 add_library( kowv2 SHARED ${wv2_SOURCES} ${wv2_HEADERS} ${wv2_GENERATED} )
 generate_export_header(kowv2 BASE_NAME wv2)
 include_directories(  ../../../../libmso)
-target_link_libraries( kowv2 mso ${ZLIB_LIBRARIES} ${ICONV_LIBRARIES}  )
+target_link_libraries( kowv2 mso ${ZLIB_LIBRARIES} ${ICONV_LIBRARIES} KF5::KDELibs4Support)
 set_target_properties( kowv2 PROPERTIES
                   SOVERSION ${LT_VERSION_CURRENT}
                   VERSION ${LT_VERSION_CURRENT}.${LT_VERSION_AGE}.${LT_VERSION_REVISION}
