Explicitly link to kdelibs4support now koodf doesn't do that anymore

--- a/filters/libmso/CMakeLists.txt
+++ b/filters/libmso/CMakeLists.txt
@@ -28,4 +28,4 @@ add_library(mso STATIC
     MsoUtils.cpp
     NumberFormatParser.cpp
 )
-target_link_libraries(mso koodf Qt5::Core Qt5::Gui)
+target_link_libraries(mso koodf KF5::KDELibs4Support Qt5::Core Qt5::Gui)
