Start wrapping gmic.h and cimg.h
You cannot #include cimg.h and Qt includes in the same unit because
of the X11 headers. This was fixable with kdelibs4 with fixx11.h,
but that is gone now, so let's build a firewall between the two.

--- a/krita/plugins/extensions/gmic/CMakeLists.txt
+++ b/krita/plugins/extensions/gmic/CMakeLists.txt
@@ -25,12 +25,14 @@ endif()
 
 set(gmic_sources_SRCS
   ${GMIC_SOURCE_DIR}/gmic.cpp
+  ${GMIC_SOURCE_DIR}/GMICWrapper.cpp
 )
 
 set(gmic_headers_SRCS
   ${GMIC_SOURCE_DIR}/CImg.h
   ${GMIC_SOURCE_DIR}/gmic_def.h
   ${GMIC_SOURCE_DIR}/gmic.h
+  ${GMIC_SOURCE_DIR}/GMICWrapper.h
 )
 
 # Mandatory flags
