Move KoFindToolbar to Words, it's only user
Summary:
Nothing shares this widget. Can be still moved to a shared lib again,
once another app wants to use exaxtly the same widget.

Reviewers: boemann, deniskuplyakov, staniek

Reviewed By: staniek

Subscribers: Calligra-Devel-list

Differential Revision: https://phabricator.kde.org/D364

--- a/words/part/CMakeLists.txt
+++ b/words/part/CMakeLists.txt
@@ -45,6 +45,8 @@ set(wordsprivate_LIB_SRCS
     frames/KWTextFrameSet.cpp
     frames/KWCopyShape.cpp
 
+    widgets/KoFindToolbar.cpp
+
     dialogs/KWFrameConnectSelector.cpp
     dialogs/KWRunAroundProperties.cpp
     dialogs/KWAnchoringProperties.cpp
