Start playing with Windows' color management api

--- a/krita/libcolor/CMakeLists.txt
+++ b/krita/libcolor/CMakeLists.txt
@@ -3,7 +3,11 @@ if (UNIX AND NOT APPLE)
     set(kritacolor_LIB_SRCS kis_color_manager_linux.cpp)
     set(kritacolor_EXTRA_LIBRARIES kritacolord)
 else ()
-    set(kritacolor_LIB_SRCS kis_color_manager_dummy.cpp)
+    if (WINDOWS)
+        set(kritacolor_LIB_SRCS kis_color_manager_windows.cpp)
+    else()
+        set(kritacolor_LIB_SRCS kis_color_manager_dummy.cpp)
+    endif()
 endif () 
 
 kde4_add_library(kritacolor SHARED ${kritacolor_LIB_SRCS} )
