Only link calligrastageprivate to Qt5::OpenGL if HAVE_OPENGL

--- a/stage/part/CMakeLists.txt
+++ b/stage/part/CMakeLists.txt
@@ -149,7 +149,11 @@ ki18n_wrap_ui(calligrastageprivate_LIB_SRCS
 
 add_library(calligrastageprivate SHARED ${calligrastageprivate_LIB_SRCS})
 
-target_link_libraries(calligrastageprivate kopageapp kowidgets kotextlayout KF5::Archive Qt5::Svg Qt5::OpenGL Qt5::WebKitWidgets)
+target_link_libraries(calligrastageprivate kopageapp kowidgets kotextlayout KF5::Archive Qt5::Svg Qt5::WebKitWidgets)
+if(HAVE_OPENGL)
+    target_link_libraries(calligrastageprivate Qt5::OpenGL)
+endif()
+
 target_link_libraries(calligrastageprivate LINK_INTERFACE_LIBRARIES kopageapp)
 
 set_target_properties(calligrastageprivate PROPERTIES VERSION ${GENERIC_CALLIGRA_LIB_VERSION} SOVERSION ${GENERIC_CALLIGRA_LIB_SOVERSION} )
