Install Braindump icons explicitely

--- a/braindump/data/icons/CMakeLists.txt
+++ b/braindump/data/icons/CMakeLists.txt
@@ -1,1 +1,15 @@
-ecm_install_icons( ${ICON_INSTALL_DIR} )
+ecm_install_icons(
+    ICONS
+        16-apps-braindump.png
+        22-apps-braindump.png
+        32-apps-braindump.png
+        48-apps-braindump.png
+        64-apps-braindump.png
+        128-apps-braindump.png
+        256-apps-braindump.png
+        512-apps-braindump.png
+        1024-apps-braindump.png
+        sc-apps-braindump.svgz
+
+    DESTINATION ${ICON_INSTALL_DIR}
+)
