--- a/braindump/data/states/icons/CMakeLists.txt
+++ b/braindump/data/states/icons/CMakeLists.txt
@@ -1,1 +1,8 @@
-ecm_install_icons( ${DATA_INSTALL_DIR}/calligra/icons )
+ecm_install_icons( 
+    ICONS
+        22-actions-stateshape.png
+        22-actions-statetool.png
+        sc-actions-stateshape.svg
+
+    DESTINATION ${DATA_INSTALL_DIR}/calligra/icons
+)
