--- a/filters/stage/powerpoint/calligra_filter_ppt2odp.desktop
+++ b/filters/stage/powerpoint/calligra_filter_ppt2odp.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Type=Service
-Name=Microsoft PowerPoint Import Filter for KPresenter
+Name=Microsoft PowerPoint Import Filter for Stage
 Name[bg]=Филтър за внасяне от Microsoft PowerPoint в KPresenter
 Name[br]=Sil enporzh Microsoft PowerPoint evit KPresenter
 Name[bs]=Microsoft PowerPoint unosni Filter za KPresenter
