--- a/filters/stage/pptx/calligra_filter_pptx2odp.desktop
+++ b/filters/stage/pptx/calligra_filter_pptx2odp.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Type=Service
-Name=MS PowerPoint 2007 Import Filter for KPresenter
+Name=MS PowerPoint 2007 Import Filter for Stage
 Name[bg]=Филтър за внасяне от MS PowerPoint 2007 в KPresenter
 Name[bs]=MS PowerPoint 2007 unosni Filter za KPresenter
 Name[ca]=Filtre d'importació Microsoft PowerPoint 2007 per al KPresenter
