--- a/filters/karbon/pdf/CMakeLists.txt
+++ b/filters/karbon/pdf/CMakeLists.txt
@@ -9,7 +9,7 @@ set(pdf2svg_PART_SRCS PdfImport.cpp SvgOutputDev.cpp )
 add_library(calligra_filter_pdf2svg MODULE ${pdf2svg_PART_SRCS})
 kcoreaddons_desktop_to_json(calligra_filter_pdf2svg calligra_filter_pdf2svg.desktop)
 
-target_link_libraries(calligra_filter_pdf2svg komain ${POPPLER_LIBRARY} ${POPPLER_CORE_LIBRARY})
+target_link_libraries(calligra_filter_pdf2svg komain KF5::KDELibs4Support ${POPPLER_LIBRARY} ${POPPLER_CORE_LIBRARY})
 if(JPEG_FOUND)
     target_link_libraries(calligra_filter_pdf2svg jpeg)
 endif()
