--- a/filters/sheets/dbase/CMakeLists.txt
+++ b/filters/sheets/dbase/CMakeLists.txt
@@ -5,7 +5,7 @@ set(dbase2kspread_PART_SRCS dbaseimport.cc dbase.cpp )
 add_library(calligra_filter_dbase2kspread MODULE ${dbase2kspread_PART_SRCS})
 kcoreaddons_desktop_to_json(calligra_filter_dbase2kspread calligra_filter_dbase2kspread.desktop)
 
-target_link_libraries(calligra_filter_dbase2kspread komain)
+target_link_libraries(calligra_filter_dbase2kspread komain KF5::KDELibs4Support)
 
 install(TARGETS calligra_filter_dbase2kspread  DESTINATION ${CALLIGRA_PLUGIN_INSTALL_DIR})
 
