--- a/gemini/CMakeLists.txt
+++ b/gemini/CMakeLists.txt
@@ -68,6 +68,7 @@ target_link_libraries(calligrageminithumbnailhelper
     Qt5::Gui
     Qt5::Core
     komain
+    KF5::KDELibs4Support
 )
 
 # Calligra Gemini application
