--- a/filters/karbon/wpg/CMakeLists.txt
+++ b/filters/karbon/wpg/CMakeLists.txt
@@ -5,7 +5,7 @@ set(wpg2svg_PART_SRCS WPGImport.cpp)
 
 add_library(calligra_filter_wpg2svg MODULE ${wpg2svg_PART_SRCS})
 
-target_link_libraries(calligra_filter_wpg2svg komain ${LIBWPG_LIBRARIES} ${LIBREVENGE_LIBRARIES})
+target_link_libraries(calligra_filter_wpg2svg komain KF5::KDELibs4Support ${LIBWPG_LIBRARIES} ${LIBREVENGE_LIBRARIES})
 kcoreaddons_desktop_to_json(calligra_filter_wpg2svg calligra_filter_wpg2svg.desktop)
 
 install(TARGETS calligra_filter_wpg2svg DESTINATION ${CALLIGRA_PLUGIN_INSTALL_DIR})
