--- a/filters/words/applixword/CMakeLists.txt
+++ b/filters/words/applixword/CMakeLists.txt
@@ -7,6 +7,6 @@ add_library(calligra_filter_applixword2odt MODULE ${applixword2odt_PART_SRCS})
 
 kcoreaddons_desktop_to_json(calligra_filter_applixword2odt calligra_filter_applixword2odt.desktop)
 
-target_link_libraries(calligra_filter_applixword2odt komain)
+target_link_libraries(calligra_filter_applixword2odt komain KF5::KDELibs4Support)
 
 install(TARGETS calligra_filter_applixword2odt  DESTINATION ${CALLIGRA_PLUGIN_INSTALL_DIR})
