--- a/karbon/common/CMakeLists.txt
+++ b/karbon/common/CMakeLists.txt
@@ -9,8 +9,8 @@ set(karboncommon_LIB_SRCS
 add_library( karboncommon SHARED ${karboncommon_LIB_SRCS} )
 generate_export_header(karboncommon BASE_NAME karboncommon)
 
-target_link_libraries(karboncommon komain kowidgets)
-target_link_libraries(karboncommon LINK_INTERFACE_LIBRARIES komain)
+target_link_libraries(karboncommon komain kowidgets KF5::KDELibs4Support)
+target_link_libraries(karboncommon LINK_INTERFACE_LIBRARIES komain KF5::KDELibs4Support)
 
 set_target_properties(karboncommon PROPERTIES VERSION ${GENERIC_CALLIGRA_LIB_VERSION} SOVERSION ${GENERIC_CALLIGRA_LIB_SOVERSION} )
 
