--- a/words/app/CMakeLists.txt
+++ b/words/app/CMakeLists.txt
@@ -2,6 +2,7 @@ project(wordsapp)
 
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/../part
+    ${CMAKE_CURRENT_BINARY_DIR}/../part
 )
 
 set(words_KDEINIT_SRCS main.cpp )
